# zygisk-prctl-skipper

./: build.gradle.kts  build.sh
module/src/main/cpp/: And64InlineHook.cpp  And64InlineHook.hpp  CMakeLists.txt  seccomp_skipper.cpp
